--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,16 @@ cloudpathlib==0.21.1
 confection==0.1.5
 cryptography==45.0.6
 cymem==2.0.11
+deprecation==2.1.0
 en_core_web_md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl#sha256=5e6329fe3fecedb1d1a02c3ea2172ee0fede6cea6e4aefb6a02d832dba78a310
+et_xmlfile==2.0.0
 fastapi==0.116.1
 h11==0.16.0
+h2==4.3.0
+hpack==4.1.0
+httpcore==1.0.9
+httpx==0.28.1
+hyperframe==6.1.0
 idna==3.10
 Jinja2==3.1.6
 joblib==1.5.1
@@ -26,25 +33,33 @@ mdurl==0.1.2
 murmurhash==1.0.13
 nltk==3.9.1
 numpy==2.3.2
+openpyxl==3.1.5
 packaging==25.0
+pandas==2.3.2
 pdf2image==1.17.0
 pdfminer.six==20250506
 pillow==11.3.0
+postgrest==1.1.1
 preshed==3.0.10
 pycparser==2.22
 pydantic==2.11.7
 pydantic_core==2.33.2
 Pygments==2.19.2
+PyJWT==2.10.1
 PyMuPDF==1.26.3
 pytesseract==0.3.13
+python-dateutil==2.9.0.post0
 python-docx==1.2.0
 python-dotenv==1.1.1
 python-multipart==0.0.20
+pytz==2025.2
+realtime==2.7.0
 regex==2025.7.34
 requests==2.32.4
 rich==14.1.0
 setuptools==80.9.0
 shellingham==1.5.4
+six==1.17.0
 smart_open==7.3.0.post1
 sniffio==1.3.1
 spacy==3.8.7
@@ -52,13 +67,20 @@ spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 srsly==2.5.1
 starlette==0.47.2
+storage3==0.12.1
+StrEnum==0.4.15
+supabase==2.18.1
+supabase_auth==2.12.3
+supabase_functions==0.10.1
 thinc==8.3.6
 tqdm==4.67.1
 typer==0.16.0
 typing-inspection==0.4.1
 typing_extensions==4.14.1
+tzdata==2025.2
 urllib3==2.5.0
 uvicorn==0.35.0
 wasabi==1.1.3
 weasel==0.4.1
+websockets==15.0.1
 wrapt==1.17.3
